--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>MALLA CURRICULAR DE CONTABILIDAD Y FINANZAS ·₊̣̇.</title>
+  <title>Malla curricular de Contabilidad y Finanzas <3  </title>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@600&family=Merriweather:ital@1&display=swap" rel="stylesheet">
   <style>
     body {
