--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
   </style>
 </head>
 <body>
-  <h1>MALLA CURRICULAR DE CONTABILIDAD Y FINANZAS ·₊̣̇.</h1>
+  <h1>Malla curricular de Contabilidad y Finanzas <3 </h1>
   <div id="contenedor"></div>
   <script>
     const prerequisitos = {
